# dspy

./: .gitignore  README.md  pyproject.toml
examples/: bybit-connect.ipynb  dataloading.ipynb  realtime_simulation.py  streaming_example.py  timing_simulation.py  trading.ipynb
run/simulation/: realistic_trading_simulation.py  realtime_simulation.py  simulation_example.py  simulation_guide.md  simulation_latency_example.py  streaming_example.py  test_enhanced_simulation.py  test_history_methods.py  test_simulation.py  timing_simulation.py
run/websocket/: websocket_private_stream_example.py  websocket_streaming_example.py  websocket_test.py
src/dspy/: __init__.py  polars_extensions.py  positions.py  utils.py
src/dspy/api/: __init__.py  api_registry.py  base.py
src/dspy/api/bybit/: __init__.py  bybit_api.py  config.py  websocket_stream.py
src/dspy/features/: __init__.py  bars.py  book_features.py  polars_extensions.py  positions.py  signal_pnl.py  trade_features.py  utils.py  volatility.py
src/dspy/hdb/: __init__.py  base.py  base_backup.py  config.py  registry.py  tardis_dataloader.py  terank_dataloader.py
src/dspy/sim/: __init__.py  positions.py  simulation_engine.py  simulation_engine_new.py
src/dspy/utils/: time.py
