[project]
name = "dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin", email = "lotzma@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dspy = "dspy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
