[project]
name = "dspy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Martin", email = "lotzma@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
    "polars>=1.23.0",
    "pytest>=8.3.4",
    "pytz>=2025.1",
    "ruff>=0.9.9",
    "typing>=3.10.0.0",
]

[project.scripts]
dspy = "dspy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
