[project]
name = "dspy"
version = "0.1.0"
description = "DS Python System"
readme = "README.md"
authors = [
    { name = "Martin", email = "martin@tripudium.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.0.0",
    "matplotlib>=3.10.1",
    "pathlib>=1.0.1",
    "polars>=1.23.0",
    "pytest>=8.3.4",
    "pytz>=2025.1",
    "ruff>=0.9.9",
    "typing>=3.10.0.0",
]

[project.scripts]
dspy = "dspy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
